# Version 3.6.0
  - Changed Auth.login to connect to the new thinaer_api
  - Changed Auth.request to connect to the new thinaer_api
  - Changed Client methods that are still in use to connect to the new thinaer_api
  - Changed Device methods that are still in use to connect to the new thinaer_api
  - Changed Venue methods that are still in use to connect to the new thinaer_api
  
# Version 3.6.0
  - Added api_key for {TACore::Scan.all}
  - Added api_key for {TACore::Movement.all}

# Version 3.5.9
  - Bug fix for {TACore::Scan.all}
  - Bug fix for {TACore::Movement.all}

# Version 3.5.8
  - Bug with {TACore::Scan.all} to be fixed
  - Bug with {TACore::Movement.all} to be fixed

# Version 3.5.7
  - Added All Method for Scans {TACore::Scans.all}
  - Added All Method for Movements {TACore::Movement.all}

# Version 3.5.6
  - Added Update Method {TACore::Movement.update}
  - Added Destroy Method {TACore::Movement.destroy}

# Version 3.5.5
  - Bug with {TACore::Device.types} now takes a token.

# Version 3.5.2
  - Bug fix for {TACore::Movement.by_device} path

# Version 3.5.1
  - Added {TACore::Movement} class to support the latest Cirrus API / Overlook Movement data.
  - {TACore::Movement.by_device} added to select movement data by device ID.

# Version 3.4.2
  - {TACore::Device.types} is now an API call for the current device types.
  - {TACore::Device.scans} now requires device_type

# Version 3.4.1
  - Bug fix for {Device.update} it now requires the Venue key and NOT the ID.

# Version 3.4.0
  - Minor version bump added Scan methods {TACore::Scan.by_cirrus}
  - Added {TACore::Venue.scans}

# Version 3.3.1
  - Cirrus API requires Venue Key and not ID. All Venue request now use KEY and not ID

# Version 3.3.0
  - Added Device.scans to retrieve scan data for the device ID.
  - Client, Venue, Device classes all moved to separate files lib/tacore/...

# Version 3.2.0
  - Minor Version bump for new create methods allowing Client.create