@@ -8,7 +8,7 @@ module TACore
       # @param gateway_id [String] Gateway ID
       # @return [Array<Object, Object>] in JSON format
       def self.sees(token, client_id, gateway_id)
-        request(:get, '/gateway/' + gateway_id.to_s + '/sees', {token: token, "client_id" => client_id})
+        request(:get, '/gateway/' + gateway_id.to_s + '/sees', {}, {token: token, "client_id" => client_id})
     end
 
     # Gets the Gateway by ID
@@ -17,7 +17,7 @@ module TACore
     # @param gateway_id [String] Gateway ID
     # @return [Array<Object, Object>] in JSON format
     def self.find(token, client_id, gateway_id)
-      request(:get, '/gateway/' + gateway_id.to_s, {token: token, "client_id" => client_id})
+      request(:get, '/gateway/' + gateway_id.to_s, {}, {token: token, "client_id" => client_id})
     end
 
     # Updates Gateway venue_id
@@ -27,7 +27,7 @@ module TACore
     # @param gateway [Object]
     # @return [Array<Object, Object>] in JSON format
     def self.update(token, client_id, gateway_id, gateway = {})
-      request(:put, '/gateway/' + gateway_id.to_s, {token: token, "client_id" => client_id})
+      request(:put, '/gateway/' + gateway_id.to_s, {}, {token: token, "client_id" => client_id})
     end
 
   end
